[package]
name = "iana-ports"
version = "0.1.0"
edition = "2021"

[dependencies]
phf = "0.11.2"


[build-dependencies]
color-eyre = "0.6.3"
csv = "1.3.0"
phf = { version = "0.11.2", default-features = false}
phf_codegen = "0.11.2"
phf_shared = "0.11.2"
serde = { version = "1.0.202", features = ["derive"] }
